[Media Controls] Prevent volume slider from moving during use

This CL adds a check in OnVolumeChange to only cause a controls
positioning update if the volume slider is not currently being used.
This prevents an issue where the controls constantly shift while the
slider is in use on smaller controls.

Bug: 893510
Change-Id: I7008f83f6435f0704c06651d54ac98d84ef31ab2
Reviewed-on: https://chromium-review.googlesource.com/c/1271397
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598136}
Former-commit-id: 476ae6d661472eedd8b03be75b28760fd2ec266d